Added flask start script and change box plot to report only temperature

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Sensor Data:</h1>
-    <h2>{{Temperature}}</h2>
-    <h2>{{Humidity}}</h2>
+    <h2>Temperature: {{Temperature}} °C</h2>
+    <h2>Humidity: {{Humidity}}%</h2>
   </body>
 </html>
