--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -9,4 +9,15 @@ h1 {
 	margin-bottom: 40px;
 	padding: 10px;
 }
+  
+.column {
+	float: left;
+	width: 50%;
+	padding: 10px;
+}
 
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
+}
